--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -11,6 +11,10 @@
     <li><a routerLink="/upload-product">Upload Product</a></li>
     <li><a routerLink="/upload-user">Upload User</a></li>
     <li><a routerLink="/user-products">User Products</a></li>
+    <li><a routerLink="/BuscarCategoria">Buscar por Categoria</a></li>
+    <li><a routerLink="/BuscarRangoPrecios">Buscar por Rango de Precios</a></li>
+    <li><a routerLink="/RecuperarCuenta">Recuperar Cuenta</a></li>
+    <li><a routerLink="/ProductoVisualizacionComponent">visualizar producto</a></li>
   </ul>
 </header>
 
