--- a/my-app/src/app/pagina/product-management-list/product-management-list.component.html
+++ b/my-app/src/app/pagina/product-management-list/product-management-list.component.html
@@ -1,1 +1,8 @@
-<p>product-management-list works!</p>
+<form #f="ngForm" (ngSubmit)="inhabilitar()">
+    <button type="submit">Inhabilitar</button>  
+  </form>
+  
+  <form #o="ngForm" (ngSubmit)="autorizar()">
+    <button type="submit">Autorizar</button>  
+  </form>
+  
