--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,26 +1,26 @@
-<header>
-  <p>Página inicial de {{ title }}</p>
-  <ul>
-    <li><a routerLink="">Home</a></li>
-    <li><a routerLink="/login">Login</a></li>
-    <li><a routerLink="/record">Record</a></li>
-    <li><a routerLink="/ListProduct">List Products</a></li>
-    <li><a routerLink="/product-management-list">Product Management List</a></li>
-    <li><a routerLink="/products">Products</a></li>
-    <li><a routerLink="/trolley">Trolley</a></li>
-    <li><a routerLink="/upload-product">Upload Product</a></li>
-    <li><a routerLink="/upload-user">Upload User</a></li>
-    <li><a routerLink="/user-products">User Products</a></li>
-    <li><a routerLink="/BuscarCategoria">Buscar por Categoria</a></li>
-    <li><a routerLink="/BuscarRangoPrecios">Buscar por Rango de Precios</a></li>
-    <li><a routerLink="/RecuperarCuenta">Recuperar Cuenta</a></li>
-    <li><a routerLink="/ProductoVisualizacionComponent">visualizar producto</a></li>
-  </ul>
-</header>
+<div class="top-bar">
+  <nav>
+    <ul class="horizontal-list">
+      <li><a routerLink="">Home</a></li>
+      <li><a routerLink="/login">Login</a></li>
+      <li><a routerLink="/record">Record</a></li>
+      <li><a routerLink="/ListProduct">List Products</a></li>
+      <li><a routerLink="/product-management-list">Product Management List</a></li>
+      <li><a routerLink="/trolley">Trolley</a></li>
+      <li><a routerLink="/upload-product">Upload Product</a></li>
+      <li><a routerLink="/upload-user">Upload User</a></li>
+      <li><a routerLink="/user-products">User Products</a></li>
+      <li><a routerLink="/BuscarCategoria">Buscar por Categoria</a></li>
+      <li><a routerLink="/BuscarRangoPrecios">Buscar por Rango de Precios</a></li>
+      <li><a routerLink="/RecuperarCuenta">Recuperar Cuenta</a></li>
+      <li><a routerLink="/ProductoVisualizacionComponent">visualizar producto</a></li>
+    </ul>
+  </nav>
+</div>
 
 <router-outlet></router-outlet>
 
-<footer>
-  <p>Universidad del Quindío - 2023</p>
+<footer class="bottom-bar">
+  <p class="text-center">Universidad del Quindío - 2023</p>
 </footer>
 
