--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,26 +1,60 @@
-<div class="top-bar">
-  <nav>
-    <ul class="horizontal-list">
-      <li><a routerLink="">Home</a></li>
-      <li><a routerLink="/login">Login</a></li>
-      <li><a routerLink="/record">Record</a></li>
-      <li><a routerLink="/ListProduct">List Products</a></li>
-      <li><a routerLink="/product-management-list">Product Management List</a></li>
-      <li><a routerLink="/trolley">Trolley</a></li>
-      <li><a routerLink="/upload-product">Upload Product</a></li>
-      <li><a routerLink="/upload-user">Upload User</a></li>
-      <li><a routerLink="/user-products">User Products</a></li>
-      <li><a routerLink="/BuscarCategoria">Buscar por Categoria</a></li>
-      <li><a routerLink="/BuscarRangoPrecios">Buscar por Rango de Precios</a></li>
-      <li><a routerLink="/RecuperarCuenta">Recuperar Cuenta</a></li>
-      <li><a routerLink="/ProductoVisualizacionComponent">visualizar producto</a></li>
-    </ul>
-  </nav>
-</div>
+<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
+<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
+<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
+<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+<!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
+<!-- * * * * * * * to get started with your project! * * * * * * * * -->
+<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<router-outlet></router-outlet>
-
-<footer class="bottom-bar">
-  <p class="text-center">Universidad del Quindío - 2023</p>
-</footer>
-
+<header class="p-3">
+  <div class="container">
+    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+      <a routerLink="" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+        <i class="fa-solid fa-bag-shopping fs-3"></i>
+        <span class="fs-4 ms-3 me-3">{{title}}</span>
+      </a>
+      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+        <li><a routerLink="" class="nav-link px-2 text-dark">Inicio</a></li>
+        <li><a routerLink="/productoSubir" class="nav-link px-2 text-dark">Vender</a></li>
+        <li><a routerLink="/historialCompras" class="nav-link px-2 text-dark">Historial compras</a></li>
+        <li><a routerLink="/historialVentas" class="nav-link px-2 text-dark">Historial ventas</a></li>
+      </ul>
+      <a class="me-3 text-dark" routerLink="/carrito"><i class="fa-solid fa-cart-shopping fa-xl carrito"></i></a>
+      <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search" (submit)="iraBusqueda(textoBusqueda.value)">
+        <input #textoBusqueda type="search" class="form-control form-control text-bg" placeholder="¿Qué buscas hoy?"
+          aria-label="Search">
+      </form>
+      <div *ngIf="!isLogged; then nologged else logged"></div>
+      <ng-template #nologged>
+        <div class="text-end">
+          <button type="button" routerLink="/login" class="btn btn-outline-light me-2">Login</button>
+          <button type="button" routerLink="/registro" class="btn btn-warning">Sign-up</button>
+        </div>
+      </ng-template>
+      <ng-template #logged>
+        <div class="text-end">
+          <label class="me-3">Hola {{email}}</label>
+          <button type="button" (click)="logout()" class="btn btn-warning">Logout</button>
+        </div>
+      </ng-template>
+    </div>
+  </div>
+</header>
+<div class="seccion-pagina p-4">
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+  <div class="container">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4
+    border-top">
+      <div class="col-md-4 d-flex align-items-center">
+        <span class="mb-3 mb-md-0 text-muted">&copy; 2023 Company, Inc</span>
+      </div>
+      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+        <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-twitter fs-5"></i></a></li>
+        <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-instagram fs-5"></i></a></li>
+        <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-facebook fs-5"></i></a></li>
+      </ul>
+    </footer>
+  </div>
