--- a/my-app/src/app/pagina/login/login.component.html
+++ b/my-app/src/app/pagina/login/login.component.html
@@ -1,17 +1,1 @@
-<form #f="ngForm" (ngSubmit)="ingresar()">
-    
-   
-    <div>
-      <label>Email: </label>
-      <input type="text" [(ngModel)]="usuario.correo" name="correo" required="true" />
-    </div>
-    
-    <div>
-      <label>Contraseña: </label>
-      <input type="text" [(ngModel)]="usuario.password" name="Contraseña" required="true" />
-    </div>
-    
-    
-    <button type="submit" [disabled]="f.invalid" >Ingresar</button>
-  </form>
-  <button>olvide mi contraseña</button>
+<p>login works!</p>
